# X-Scout

./: .gitignore  Makefile  README.md  cookies.json  filter_tweets.py  filtered_tweets.jsonl  get_cookies.py  main.py  pyproject.toml  session_manager.py  summarizer.py  summary.txt  twikit_tweets.jsonl  viewer.html
cookie_gen_user_data/: Local State
cookie_gen_user_data/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  MediaDeviceSalts  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
cookie_gen_user_data/Default/Cache/Cache_Data/: 0073e8c8bb05ce19_0  (+239 more)
cookie_gen_user_data/Default/DawnGraphiteCache/: index
cookie_gen_user_data/Default/DawnWebGPUCache/: index
cookie_gen_user_data/Default/Extension Rules/: LOG
cookie_gen_user_data/Default/Extension Scripts/: LOG
cookie_gen_user_data/Default/Extension State/: LOG  LOG.old
cookie_gen_user_data/Default/GCM Store/: LOG
cookie_gen_user_data/Default/GPUCache/: index
cookie_gen_user_data/Default/Session Storage/: LOG  LOG.old
cookie_gen_user_data/Default/Sessions/: Session_13400122233958803  Session_13400122257850286  Tabs_13400122235023975  Tabs_13400122257955521
cookie_gen_user_data/Default/Site Characteristics Database/: LOG  LOG.old
cookie_gen_user_data/Default/WebStorage/: QuotaManager
cookie_gen_user_data/Default/shared_proto_db/: LOG  LOG.old
cookie_gen_user_data/GrShaderCache/: index
cookie_gen_user_data/GraphiteDawnCache/: index
cookie_gen_user_data/ShaderCache/: index
cookie_gen_user_data/segmentation_platform/: ukm_db
(+262 files in other folders)
