[project]
name = "py-x-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify-client>=2.0.0",
    "jmespath>=1.0.1",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "twikit>=2.3.3",
]
